[package]
name = "wolffia_kernel"
version = "0.1.0"
authors = ["Restioson <restiosondev@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
spin = "0.6.0"
uart_16550 = "0.2.10"
multiboot2 = "0.9.0"
x86_64 = "0.12.2"
tinyvec = { version = "1.0.1", features = ["nightly_const_generics"] }
bit_field = "0.10.1"
bitflags = "1.2.1"
log = "0.4.11"
acpi = "2.0.0"
ccl = { version = "1.2", features = ["no_std"], default-features = false } # no std machine broke
array-init = "0.1.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
friendly = { git = "https://github.com/Restioson/friendly" }
